src/main/gen/com/olegstotsky/etchosts/parser/EtcHostsParser.java
// This is a generated file. Not intended for manual editing.
package com.olegstotsky.etchosts.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.olegstotsky.etchosts.psi.EtcHostsTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class EtcHostsParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return Root(b, l + 1);
  }

  /* ********************************************************** */
  // ip id id?
  public static boolean Elem(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Elem")) return false;
    if (!nextTokenIs(b, IP)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, IP, ID);
    r = r && Elem_2(b, l + 1);
    exit_section_(b, m, ELEM, r);
    return r;
  }

  // id?
  private static boolean Elem_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Elem_2")) return false;
    consumeToken(b, ID);
    return true;
  }

  /* ********************************************************** */
  // Elem | comment
  public static boolean Item(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Item")) return false;
    if (!nextTokenIs(b, "<item>", COMMENT, IP)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ITEM, "<item>");
    r = Elem(b, l + 1);
    if (!r) r = consumeToken(b, COMMENT);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // Item*
  static boolean Root(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Root")) return false;
    while (true) {
      int c = current_position_(b);
      if (!Item(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "Root", c)) break;
    }
    return true;
  }

}
